--- a/RR-boma.Rmd
+++ b/RR-boma.Rmd
@@ -3,7 +3,6 @@ title: 'Rhino immobilisation in a boma: respiratory rate'
 author: "Peter Kamerman"
 date: "`r format(Sys.Date(), '%d %B %Y')`"
 output:
-output:
   html_document:
     highlight: pygments
     theme: yeti
@@ -86,7 +85,7 @@ df %>%
 
 ****
 
-**Note**: Analysis compares _Butorphanol_ to _Saline_ and _Butorphanol + M5050_, and only includes main effects.
+**Note**: Analysis compares _Butorphanol_ to _Sterile water_ and _Butorphanol + M5050_, and only includes main effects.
 
 ****
 
